examples/errors/parsing/let_annotated-empty-rhs.cn
main : () [impure] =
  let a : Int = ;
  ()
